src/FinancialForce Accounting/objects/codaPaymentBatchLineItem__c.object
<CustomObject>
    <customHelpPage>codahelppayment</customHelpPage>
    <description>The line items of the payment batches generated as part of a payment process (holds information about transaction line items being paid).</description>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <formula>PaymentDetail__r.Transaction__r.DocumentNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentBatch__c</fullName>
        <label>Payment Batch</label>
        <referenceTo>codaPaymentBatch__c</referenceTo>
        <relationshipLabel>Payment Batch Line Items</relationshipLabel>
        <relationshipName>PaymentBatchLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PaymentDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Detail</label>
        <referenceTo>codaPaymentLineItem__c</referenceTo>
        <relationshipLabel>Payment Batch Line Items</relationshipLabel>
        <relationshipName>PaymentBatchLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransactionValue__c</fullName>
        <label>Transaction Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Batch Line Item</label>
    <nameField>
        <displayFormat>PBL{000000}</displayFormat>
        <label>Payment Batch Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Batch Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>